--- a/res/xml/custom_bat_circle_settings.xml
+++ b/res/xml/custom_bat_circle_settings.xml
@@ -20,7 +20,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="depleted_levels_color_one"
 		android:title="Max Level One Color"
@@ -36,7 +36,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="30" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="depleted_levels_color_two"
 		android:title="Max Level Two Color"
@@ -45,7 +45,7 @@
 		alphaSlider="false" />	
 
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="depleted_levels_color_three"
 		android:title="Max Level Three Color"
@@ -66,7 +66,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="battery_levels_color_one"
 		android:title="Max Level One Color"
@@ -81,7 +81,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="30" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="battery_levels_color_two"
 		android:title="Max Level Two Color"
@@ -90,7 +90,7 @@
 		alphaSlider="false" />	
     	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="battery_levels_color_three"
 		android:title="Max Level Three Color"
