--- a/res/xml/custom_bat_number_settings.xml
+++ b/res/xml/custom_bat_number_settings.xml
@@ -54,7 +54,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="depleted_levels_color_one"
 		android:title="Max Level One Color"
@@ -70,7 +70,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="30" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="depleted_levels_color_two"
 		android:title="Max Level Two Color"
@@ -79,7 +79,7 @@
 		alphaSlider="false" />	
 
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="depleted_levels_color_three"
 		android:title="Max Level Three Color"
@@ -102,7 +102,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="battery_levels_color_one"
 		android:title="Max Level One Color"
@@ -117,7 +117,7 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="30" />	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="battery_levels_color_two"
 		android:title="Max Level Two Color"
@@ -126,7 +126,7 @@
 		alphaSlider="false" />	
     	
    
-	<com.android.settings.ColorPickerPreference
+	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="battery_levels_color_three"
 		android:title="Max Level Three Color"
