--- a/res/xml/custom_quickcolor_settings.xml
+++ b/res/xml/custom_quickcolor_settings.xml
@@ -19,7 +19,7 @@
 	>
 	
     
-   	<com.android.settings.ColorPickerPreference
+   	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild" 
 		android:key="qk_color"
 		android:title="Color"
