--- a/res/xml/custom_color_settings.xml
+++ b/res/xml/custom_color_settings.xml
@@ -22,14 +22,14 @@
 		android:title="B A T T E R Y   A N D   S I G N A L   I C O N S"
 		android:key="quickcolor_icons">
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="icon_color"
 			android:title="Statusbar Signal Icons Color"
 			android:defaultValue="#ff3fa2c7" 
 			alphaSlider="false" /> 			
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="depleted_levels_color_one"
 			android:title="Depleted Level One Color"
@@ -37,7 +37,7 @@
 			android:defaultValue="#ff800000" 
 			alphaSlider="false" />
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="depleted_levels_color_two"
 			android:title="Depleted Level Two Color"
@@ -45,7 +45,7 @@
 			android:defaultValue="#ffba6900" 
 			alphaSlider="false" />	
 		
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="depleted_levels_color_three"
 			android:title="Depleted Level Three Color"
@@ -54,7 +54,7 @@
 			alphaSlider="false" />		
 				
 						
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="battery_levels_color_one"
 			android:title="Battery Level One Color"
@@ -62,7 +62,7 @@
 			android:defaultValue="#ffff0000" 
 			alphaSlider="false" />
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="battery_levels_color_two"
 			android:title="Battery Level Two Color"
@@ -70,7 +70,7 @@
 			android:defaultValue="#ffff9000" 
 			alphaSlider="false" />	
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="battery_levels_color_three"
 			android:title="Battery Level Three Color"
@@ -86,7 +86,7 @@
 		android:title="C H A R G I N G   I C O N"
 		android:key="quickcolor_charge">
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="charge_levels_color_one"
 			android:title="Charging Level One Color"
@@ -94,7 +94,7 @@
 			android:defaultValue="#ffff0000" 
 			alphaSlider="false" />
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="charge_levels_color_two"
 			android:title="Charging Level Two Color"
@@ -102,7 +102,7 @@
 			android:defaultValue="#ffff9000" 
 			alphaSlider="false" />	
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="charge_levels_color_three"
 			android:title="Charging Level Three Color"
@@ -117,7 +117,7 @@
 		android:title="N A V I G A T I O N   B A R"
 		android:key="quickcolor_navbar">
    				
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 	   		android:layout="?android:attr/preferenceLayoutChild"
 			android:key="nav_button_color"
 			android:title="Navigation Button Color"
@@ -133,7 +133,7 @@
 		android:title="C L O C K"
 		android:key="quickcolor_clock">
 	
-   		<com.android.settings.ColorPickerPreference
+   		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="clock_color"
 			android:title="Clock Color"
@@ -150,7 +150,7 @@
 		android:title="S T A T U S B A R   P U L L D O W N"
 		android:key="quickcolor_pulldown">
    				
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="date_color"
 			android:title="Date Color"
@@ -158,7 +158,7 @@
 			android:defaultValue="#ff3792b4" 
 			alphaSlider="false" /> 		
         
-        <com.android.settings.ColorPickerPreference
+        <ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="clear_button_color"
 			android:title="Clear All Button Color"
@@ -166,7 +166,7 @@
 			android:defaultValue="#ff3792b4" 
 			alphaSlider="false" /> 	
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="close_bar_color"
 			android:title="Pulldown Handle Color"
@@ -174,7 +174,7 @@
 			android:defaultValue="#ff3792b4" 
 			alphaSlider="false" />         
         
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="carrier_color"
 			android:title="Carrier Text Color"
@@ -182,7 +182,7 @@
 			android:defaultValue="#ff3792b4" 
 			alphaSlider="false" /> 
 			
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="battery_label_color"
 			android:title="Battery Level Color"
@@ -190,7 +190,7 @@
 			android:defaultValue="#ff3792b4" 
 			alphaSlider="false" /> 
 			
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="temp_label_color"
 			android:title="Battery Temperature Color"
@@ -208,7 +208,7 @@
 		android:title="T O G G L E S"
 		android:key="quickcolor_toggles">
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggle_color"
 			android:title="Toggle Background Color"
@@ -216,7 +216,7 @@
 			android:defaultValue="#ff272727" 
 			alphaSlider="false" /> 
 		
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggles_icon_on_color"
 			android:title="Icon On Color"
@@ -224,7 +224,7 @@
 			android:defaultValue="#ff3792b4" 
 			alphaSlider="false" /> 
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggles_icon_inter_color"
 			android:title="Icon Intermediate Color"
@@ -232,7 +232,7 @@
 			android:defaultValue="#ffff0000" 
 			alphaSlider="false" /> 
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggles_icon_off_color"
 			android:title="Icon Off Color"
@@ -240,7 +240,7 @@
 			android:defaultValue="#ff555555" 
 			alphaSlider="false" />
 		
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggle_ind_on_color"
 			android:title="Indicator On Color"
@@ -248,7 +248,7 @@
 			android:defaultValue="#ffffffff" 
 			alphaSlider="false" /> 
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild" 
 			android:key="toggle_ind_off_color"
 			android:title="Indicator Off Color"
@@ -256,7 +256,7 @@
 			android:defaultValue="#ff555555" 
 			alphaSlider="false" /> 			
 			
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggle_text_on_color"
 			android:title="Text Label On Color"
@@ -264,7 +264,7 @@
 			android:defaultValue="#ffffffff" 
 			alphaSlider="false" />
 
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggle_text_off_color"
 			android:title="Text Label Off Color"
@@ -272,7 +272,7 @@
 			android:defaultValue="#ff555555" 
 			alphaSlider="false" />
 		
-		<com.android.settings.ColorPickerPreference
+		<ColorPickerPreference
 			android:layout="?android:attr/preferenceLayoutChild"
 			android:key="toggle_divider_color"
 			android:title="Divider Color"
