Added: Pulldown colors - shade, grip, bars and notifications
Change-Id: Iaac222ac1d43b7cd96ff14d84e3d878caa26e6ab

--- a/res/xml/custom_toggle_settings.xml
+++ b/res/xml/custom_toggle_settings.xml
@@ -62,9 +62,9 @@
 		android:dependency="toggles_show_toggles"
 		android:key="toggle_color"
 		android:title="Toggle Background Color"
-		android:summary="Color for toggles"
+		android:summary="Background color for the toggles"
 		android:defaultValue="#ff272727" 
-		alphaSlider="false" /> 
+		alphaSlider="true" /> 
 		
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
