--- a/res/xml/custom_pulldown_settings.xml
+++ b/res/xml/custom_pulldown_settings.xml
@@ -32,19 +32,74 @@
 
     </PreferenceCategory>
 
-
-    
     <PreferenceCategory
-		android:title="P U L L D O W N   H A N D L E"
-		android:key="pulldown_closebar">    
-    	
+		android:title="N O T I F I C A T I O N S"
+		android:key="pd_notif">
+
+       
+        
+ 	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="pd_notif_icon_bg_color"
+		android:title="Notification Icon Background Color"
+		android:summary="Background color for the notification icon"
+		android:defaultValue="#ff000000" 
+		alphaSlider="true" /> 		
+        
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
-		android:key="close_bar_color"
+		android:key="pd_notif_text_color"
+		android:title="Notification Text Color"
+		android:summary="Notification text color"
+		android:defaultValue="#ffffffff" 
+		alphaSlider="false" /> 		
+ 	
+ 	
+ 	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="pd_notif_text_bg_color"
+		android:title="Notification Text Background Color"
+		android:summary="Background color for the notification text"
+		android:defaultValue="#ff000000" 
+		alphaSlider="true" /> 		
+
+    </PreferenceCategory>
+    
+    <PreferenceCategory
+		android:title="P U L L D O W N   S H A D E"
+		android:key="pulldown">    
+ 
+	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="pd_shade_color"
+		android:title="Pulldown Shade"
+		android:summary="Color for statusbar pulldown shade"
+		android:defaultValue="#80000000" 
+		alphaSlider="true" /> 				
+        	
+	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="pd_carrier_frame_color"
+		android:title="Carrier Bar Color"
+		android:summary="Color for carrier bar"
+		android:defaultValue="#ff3792b4" 
+		alphaSlider="true" /> 		
+	
+	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="pd_handle_color"
 		android:title="Pulldown Handle Color"
 		android:summary="Color for statusbar pulldown handle"
 		android:defaultValue="#ff3792b4" 
-		alphaSlider="false" /> 				
+		alphaSlider="true" /> 	
+		
+	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="pd_grip_color"
+		android:title="Pulldown Grip Color"
+		android:summary="Color for statusbar pulldown grip"
+		android:defaultValue="#ff000000" 
+		alphaSlider="true" /> 			
 	
     </PreferenceCategory>
 
@@ -54,6 +109,15 @@
 		android:title="D A T E"
 		android:key="date_settings">
 
+ 	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="date_bar_color"
+		android:title="Date Bar Color"
+		android:summary="Color for the date bar"
+		android:defaultValue="#ffffffff" 
+		alphaSlider="true" /> 	        
+        
+        
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
 		android:key="date_color"
