Added/Fixed: New color options
Change-Id: I36931b0a8c6d75bf73693cee0aa2c8a46d027238

--- a/res/xml/custom_clock_settings.xml
+++ b/res/xml/custom_clock_settings.xml
@@ -30,7 +30,7 @@
 		android:summaryOn="Left Clock is on"
 		android:summaryOff="Left Clock is off"
 		android:title="Left Clock" 
-		android:defaultValue="true"	/>	
+		android:defaultValue="false"	/>	
 	
 	<CheckBoxPreference 
 		android:layout="?android:attr/preferenceLayoutChild" 
@@ -38,7 +38,7 @@
 		android:summaryOn="Center Clock is on"
 		android:summaryOff="Center Clock is off"
 		android:title="Center Clock" 
-		android:defaultValue="true"	/>
+		android:defaultValue="false"	/>
 	
 	<CheckBoxPreference 
 		android:layout="?android:attr/preferenceLayoutChild" 
