--- a/res/xml/custom_pulldown_settings.xml
+++ b/res/xml/custom_pulldown_settings.xml
@@ -26,8 +26,16 @@
 		android:layout="?android:attr/preferenceLayoutChild"
 		android:key="clear_button_color"
 		android:title="Clear All Button Color"
-		android:summary="Color for clear all button"
-		android:defaultValue="#ff3792b4" 
+		android:summary="Color for clear all button (reboot required)"
+		android:defaultValue="#ff1a4554" 
+		alphaSlider="true" /> 	        
+        
+ 	<ColorPickerPreference
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:key="clear_button_text_color"
+		android:title="Clear All Button Text Color"
+		android:summary="Color for clear all button text (reboot required)"
+		android:defaultValue="#ffffffff" 
 		alphaSlider="false" /> 		
 
     </PreferenceCategory>
@@ -41,27 +49,27 @@
  	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
 		android:key="pd_notif_icon_bg_color"
-		android:title="Notification Icon Background Color"
-		android:summary="Background color for the notification icon"
-		android:defaultValue="#ff000000" 
-		alphaSlider="true" /> 		
+		android:title="Icon Background Color"
+		android:summary="Background color for the notification icon (reboot required)"
+		android:defaultValue="#ff1a4554" 
+		alphaSlider="false" /> 		
         
 	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
 		android:key="pd_notif_text_color"
-		android:title="Notification Text Color"
-		android:summary="Notification text color"
-		android:defaultValue="#ffffffff" 
+		android:title="Text Color"
+		android:summary="Notification text color (reboot required)"
+		android:defaultValue="#ff000000" 
 		alphaSlider="false" /> 		
  	
  	
  	<ColorPickerPreference
 		android:layout="?android:attr/preferenceLayoutChild"
 		android:key="pd_notif_text_bg_color"
-		android:title="Notification Text Background Color"
-		android:summary="Background color for the notification text"
-		android:defaultValue="#ff000000" 
-		alphaSlider="true" /> 		
+		android:title="Text Background Color"
+		android:summary="Background color for the notification text (reboot required)"
+		android:defaultValue="#ff2782a3" 
+		alphaSlider="false" /> 		
 
     </PreferenceCategory>
     
@@ -74,7 +82,7 @@
 		android:key="pd_shade_color"
 		android:title="Pulldown Shade"
 		android:summary="Color for statusbar pulldown shade"
-		android:defaultValue="#80000000" 
+		android:defaultValue="#bd000000" 
 		alphaSlider="true" /> 				
         	
 	<ColorPickerPreference
@@ -82,7 +90,7 @@
 		android:key="pd_carrier_frame_color"
 		android:title="Carrier Bar Color"
 		android:summary="Color for carrier bar"
-		android:defaultValue="#ff3792b4" 
+		android:defaultValue="#d3000000" 
 		alphaSlider="true" /> 		
 	
 	<ColorPickerPreference
@@ -90,7 +98,7 @@
 		android:key="pd_handle_color"
 		android:title="Pulldown Handle Color"
 		android:summary="Color for statusbar pulldown handle"
-		android:defaultValue="#ff3792b4" 
+		android:defaultValue="#d7000000" 
 		alphaSlider="true" /> 	
 		
 	<ColorPickerPreference
@@ -98,7 +106,7 @@
 		android:key="pd_grip_color"
 		android:title="Pulldown Grip Color"
 		android:summary="Color for statusbar pulldown grip"
-		android:defaultValue="#ff000000" 
+		android:defaultValue="#ff3792b4" 
 		alphaSlider="true" /> 			
 	
     </PreferenceCategory>
@@ -114,7 +122,7 @@
 		android:key="date_bar_color"
 		android:title="Date Bar Color"
 		android:summary="Color for the date bar"
-		android:defaultValue="#ffffffff" 
+		android:defaultValue="#ff000000" 
 		alphaSlider="true" /> 	        
         
         
