--- a/res/xml/custom_charging_settings.xml
+++ b/res/xml/custom_charging_settings.xml
@@ -11,7 +11,7 @@
     <PreferenceCategory
 		android:title="C H A R G I N G   L E V E L   C O L O R S"
 		android:key="charge_color_ranges"
-		android:summary="Charging icon colors based on battery level"	>    
+		android:summary="Charging levels to apply colors"	>    
  
 
  	
@@ -22,13 +22,6 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="10" />	
    
-	<ColorPickerPreference
-		android:layout="?android:attr/preferenceLayoutChild" 
-		android:key="charge_levels_color_one"
-		android:title="Max Level One Color"
-		android:summary="Color assigned from Max Level One down to 0"
-		android:defaultValue="#ff800000" 
-		alphaSlider="false" />
 
     	
 	<Preference
@@ -38,22 +31,6 @@
 		android:summary="Maximimum level for the color"
 		android:defaultValue="30" />	
    
-	<ColorPickerPreference
-		android:layout="?android:attr/preferenceLayoutChild" 
-		android:key="charge_levels_color_two"
-		android:title="Max Level Two Color"
-		android:summary="Color assigned from Max Level Two down to Max Level One"
-		android:defaultValue="#ffba6900" 
-		alphaSlider="false" />	
-
-   
-	<ColorPickerPreference
-		android:layout="?android:attr/preferenceLayoutChild" 
-		android:key="charge_levels_color_three"
-		android:title="Max Level Three Color"
-		android:summary="Color assigned from 100 down to Max Level Two"
-		android:defaultValue="#ff296c85" 
-		alphaSlider="false" />		
 
     
     </PreferenceCategory>
